--- a/SignupPage/signupPageStyles.css
+++ b/SignupPage/signupPageStyles.css
@@ -1,21 +1,21 @@
-body{
+body {
   margin: 0;
   padding: 0;
-  font-family: 'Baloo Chettan 2';
+  font-family: "Baloo Chettan 2";
   background: #34495e;
 }
 
-.box h1{
+.box h1 {
   color: white;
   text-transform: uppercase;
   font-weight: 500;
 }
 
-.box h4{
+.box h4 {
   color: white;
 }
 
-.box{
+.box {
   width: 300px;
   padding: 40px;
   position: absolute;
@@ -26,7 +26,8 @@ body{
   text-align: center;
 }
 
-.box input[type="text"],.box input[type="password"]{
+.box input[type="text"],
+.box input[type="password"] {
   border: 0;
   background: none;
   display: block;
@@ -41,7 +42,8 @@ body{
   transition: 0.25s;
 }
 
-.box input[type="text"]:focus,.box input[type="password"]:focus{
+.box input[type="text"]:focus,
+.box input[type="password"]:focus {
   width: 280px;
   border-color: #2ecc71;
 }
@@ -64,7 +66,7 @@ body{
 .box input[type="submit"]:hover{
   background: #2ecc71;
 }*/
-.box .signupSub{
+.box .signupSub {
   border: 0;
   background: none;
   display: block;
@@ -79,11 +81,11 @@ body{
   cursor: pointer;
 }
 
-.box .signupSub:hover{
+.box .signupSub:hover {
   background: #2ecc71;
 }
 
-a{
+a {
   transform: translate(6px, -35px);
   display: block;
   position: absolute;
@@ -102,23 +104,21 @@ a{
   z-index: 1;
 }
 
-a:hover{
+a:hover {
   animation: animate 8s linear infinite;
 }
 
-@keyframes animate{
-  0%
-  {
-    background-position: 0%
+@keyframes animate {
+  0% {
+    background-position: 0%;
   }
-  100%
-  {
-    background-position: 400%
+  100% {
+    background-position: 400%;
   }
 }
 
-a:before{
-  content: '';
+a:before {
+  content: "";
   position: absolute;
   top: -5px;
   left: -5px;
@@ -132,7 +132,7 @@ a:before{
   transition: 0.5s;
 }
 
-a:hover:before{
+a:hover:before {
   filter: blur(20px);
   opacity: 1;
   animation: animate 8s linear infinite;
