--- a/iconos.css
+++ b/iconos.css
@@ -1,18 +1,19 @@
 @font-face {
-  font-family: 'DJBlueFonts';
-  src:  url('DJBlueFonts.eot?z6b8u3');
-  src:  url('DJBlueFonts.eot?z6b8u3#iefix') format('embedded-opentype'),
-    url('DJBlueFonts.ttf?z6b8u3') format('truetype'),
-    url('DJBlueFonts.woff?z6b8u3') format('woff'),
-    url('DJBlueFonts.svg?z6b8u3#DJBlueFonts') format('svg');
+  font-family: "DJBlueFonts";
+  src: url("DJBlueFonts.eot?z6b8u3");
+  src: url("DJBlueFonts.eot?z6b8u3#iefix") format("embedded-opentype"),
+    url("DJBlueFonts.ttf?z6b8u3") format("truetype"),
+    url("DJBlueFonts.woff?z6b8u3") format("woff"),
+    url("DJBlueFonts.svg?z6b8u3#DJBlueFonts") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="icon-"],
+[class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'DJBlueFonts' !important;
+  font-family: "DJBlueFonts" !important;
   speak: none;
   font-style: normal;
   font-weight: normal;
